--- a/gruppi.tex
+++ b/gruppi.tex
@@ -980,7 +980,7 @@ e ognuna di questa azioni induce un prodotto semidiretto isomorfo a uno dei grup
 	\end{proof}
 	
 	\begin{prop}
-		Sia $ G $ un gruppo di ordine $ 2^kd $, dove $ d $ è dispari. Allora esiste un sottogruppo di indice 2.
+		Sia $ G $ un gruppo di ordine $ 2^kd $, dove $ d $ è dispari, con il 2-sylow ciclico. Allora esiste un sottogruppo di indice 2.
 	\end{prop}
 	\begin{proof}
 		Il Teorema di Cayley ci fornisce l'immersione seguente, per moltiplicazione sinistra
@@ -990,7 +990,7 @@ e ognuna di questa azioni induce un prodotto semidiretto isomorfo a uno dei grup
 		\end{align*}
 		Dato un elemento $ g $, conosciamo la decomposizione in cicli di $ \varphi_g $, questa dev'essere prodotto di cicli del tipo
 		$$  (x \; gx \; \cdots \; g^{m-1}x)  $$
-		al variare di $ x $ in un opportuno sistema di rappresentanti e dove $ m $ è l'ordine di $ g $. Per il Teorema di Cauchy esiste un elemento di ordine $ 2 $, che avrà dunque come immagine il prodotto di $ d $ $2^k $-cicli, perché nessun elemento è fissato dalla moltiplicazione sinistra. Pertanto $ G \nless \mathcal{A}_{2d} $ e quindi $$  [G : G \cap \mathcal{A}_{2d}] = 2  $$
+		al variare di $ x $ in un opportuno sistema di rappresentanti e dove $ m $ è l'ordine di $ g $. Esiste un elemento di ordine $ 2^k $, che avrà dunque come immagine il prodotto di $ d $ $2^k $-cicli, perché nessun elemento è fissato dalla moltiplicazione sinistra. Pertanto $ G \nless \mathcal{A}_{2d} $ e quindi $$  [G : G \cap \mathcal{A}_{2d}] = 2  $$
 	\end{proof}
 	\columnbreak
 	\begin{prop}
