--- a/gruppi.tex
+++ b/gruppi.tex
@@ -990,7 +990,7 @@ e ognuna di questa azioni induce un prodotto semidiretto isomorfo a uno dei grup
 		\end{align*}
 		Dato un elemento $ g $, conosciamo la decomposizione in cicli di $ \varphi_g $, questa dev'essere prodotto di cicli del tipo
 		$$  (x \; gx \; \cdots \; g^{m-1}x)  $$
-		al variare di $ x $ in un opportuno sistema di rappresentanti e dove $ m $ è l'ordine di $ g $. Esiste un elemento di ordine $ 2^k $, che avrà dunque come immagine il prodotto di $ d $ $2^k $-cicli, perché nessun elemento è fissato dalla moltiplicazione sinistra. Pertanto $ G \nless \mathcal{A}_{2d} $ e quindi $$  [G : G \cap \mathcal{A}_{2d}] = 2  $$
+		al variare di $ x $ in un opportuno sistema di rappresentanti e dove $ m $ è l'ordine di $ g $. Esiste un elemento di ordine $ 2^k $, che avrà dunque come immagine il prodotto di $ d $ $2^k $-cicli, visto che la moltiplicazione sinistra è un'azione transitiva. Pertanto $ G \nless \mathcal{A}_{2d} $ e quindi $$  [G : G \cap \mathcal{A}_{2d}] = 2  $$
 	\end{proof}
 	\columnbreak
 	\begin{prop}
