--- a/campi.tex
+++ b/campi.tex
@@ -478,7 +478,7 @@ e chiediamoci:
 	\end{prop}
 	
 	\begin{theorem}[dell'estensione a caso]\label{galrandom}
-		Se $ L/K $ è un'estensione di Galois e $ F/K $ è un'estensione algebrica (tale che entrambe stiano in una qualche sovra-estensione?), allora $ LF/F $ è di Galois. 
+		Se $ L/K $ è un'estensione di Galois e $ F/K $ è un'estensione algebrica, allora $ LF/F $ è di Galois. 
 		
 		\[\begin{tikzcd}[row sep=0.25cm, column sep=0.3cm]
 		 & LF \arrow[dl,-] \arrow[dr,-, dashed] &  \\
@@ -505,7 +505,7 @@ e chiediamoci:
 		per il lemma \ref{cosetta1}. Dobbiamo pertanto concludere che
 		\[ \texttt{res}(\Gal{LF/F}) \cong \Gal{L/L\cap F} \]
 	\end{proof}
-	
+	\columnbreak
 	\begin{definition}
 		Diciamo che due estensioni $ L_1/K $ e $ L_2/K $ sono \emph{linearmente disgiunte} quando
 		\[ L_1 \cap L_2 = K \]
